--- a/config/Gemfile
+++ b/config/Gemfile
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
@@ -26,45 +28,46 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'byebug', platforms: %i[mri mingw x64_mingw]
 end
 
 group :development do
   # Access an interactive console on exception pages or by calling 'console' anywhere in the code.
-  gem 'web-console', '>= 3.3.0'
   gem 'listen', '>= 3.0.5', '< 3.2'
+  gem 'web-console', '>= 3.3.0'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
 
 # CPP Additions
 gem 'graphql'
 gem 'interactor-rails'
+gem 'lookup_data', path: '../lookup_data'
 gem 'pundit'
 gem 'rails_warden'
-gem 'lookup_data', path: '../lookup_data'
 
 group :development do
-  gem 'guard-rails'
-  gem 'guard-bundler'
-  gem 'guard-rspec'
-  gem 'guard-process'
-  gem 'guard-spring'
   gem 'annotate'
+  gem 'guard-bundler'
+  gem 'guard-process'
+  gem 'guard-rails'
+  gem 'guard-rspec'
+  gem 'guard-spring'
   gem 'libnotify'
+  gem 'rubocop', '~> 0.60.0', require: false
 end
 
 group :test do
-  gem 'rspec-rails'
   gem 'database_cleaner'
   gem 'factory_bot_rails'
-  gem 'shoulda-matchers'
-  gem 'rspec-graphql_matchers'
   gem 'pundit-matchers', '~> 1.6.0'
+  gem 'rspec-graphql_matchers'
+  gem 'rspec-rails'
+  gem 'shoulda-matchers'
 end
 
 group :development, :test do
