--- a/config/Gemfile
+++ b/config/Gemfile
@@ -38,6 +38,9 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'spring-commands-rspec'
+  gem 'spring-commands-rubocop'
+
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
@@ -67,6 +70,7 @@ group :test do
   gem 'pundit-matchers', '~> 1.6.0'
   gem 'rspec-graphql_matchers'
   gem 'rspec-rails'
+  gem 'fuubar'
   gem 'shoulda-matchers'
 end
 
