--- a/config/Gemfile
+++ b/config/Gemfile
@@ -37,10 +37,9 @@ group :development do
   gem 'web-console', '>= 3.3.0'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
   gem 'spring-commands-rspec'
   gem 'spring-commands-rubocop'
-
+  gem 'spring-watcher-listen', '~> 2.0.0'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
@@ -52,6 +51,7 @@ gem 'interactor-rails'
 gem 'lookup_data', path: '../lookup_data'
 gem 'pundit'
 gem 'rails_warden'
+gem 'surus'
 
 group :development do
   gem 'annotate'
@@ -67,10 +67,10 @@ end
 group :test do
   gem 'database_cleaner'
   gem 'factory_bot_rails'
+  gem 'fuubar'
   gem 'pundit-matchers', '~> 1.6.0'
   gem 'rspec-graphql_matchers'
   gem 'rspec-rails'
-  gem 'fuubar'
   gem 'shoulda-matchers'
 end
 
