--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,9 +1,9 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: site
+  source_path: client
   source_entry_path: packs
-  public_output_path: packs
+  public_output_path: site
   cache_path: tmp/cache/webpacker
 
   # Additional paths webpack should lookup modules
@@ -16,11 +16,7 @@ default: &default
   extensions:
     - .jsx
     - .js
-    - .sass
-    - .scss
     - .css
-    - .module.sass
-    - .module.scss
     - .module.css
     - .png
     - .svg
