--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
   "name": "retunnel",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-pro-solid": "^5.0.13",
     "@rails/webpacker": "3.5",
+    "apollo-boost": "^0.1.22",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
+    "graphql": "^14.0.2",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.4.0",
+    "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
-    "tachyons-custom": "^4.9.6"
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
+    "react-typography": "^0.16.13",
+    "tachyons-custom": "^4.9.6",
+    "typography": "^0.16.17",
+    "typography-theme-wordpress-2012": "^0.15.10"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
