--- a/.postcssrc.yml
+++ b/.postcssrc.yml
@@ -1,3 +1,8 @@
 plugins:
   postcss-import: {}
-  postcss-cssnext: {}
+  postcss-preset-env:
+    stage: 0
+    features:
+      customProperties:
+        strict: false
+        preserve: true
