--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
     "graphql": "^14.0.2",
+    "inflection": "^1.12.0",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.4.0",
     "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "^16.6.2",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
@@ -25,6 +26,5 @@
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
   },
-  "scripts": {
-  }
+  "scripts": {}
 }
