--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "retunnel",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-pro-regular": "^5.0.13",
     "@fortawesome/fontawesome-pro-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/pro-light-svg-icons": "^5.5.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.5.0",
+    "@fortawesome/pro-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@rails/webpacker": "3.5",
     "apollo-boost": "^0.1.22",
     "babel-preset-react": "^6.24.1",
@@ -15,13 +21,15 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.2",
     "react-apollo": "^2.3.2",
+    "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
     "react-typography": "^0.16.13",
     "tachyons-custom": "^4.9.6",
     "typography": "^0.16.17",
-    "typography-theme-wordpress-2012": "^0.15.10"
+    "typography-theme-wordpress-2012": "^0.15.10",
+    "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
