--- a/public/site/manifest.json
+++ b/public/site/manifest.json
@@ -1,8 +1,8 @@
 {
-  "tunnel_logs.js": "/site/tunnel_logs-b7bf6ed736588476a12d.js",
-  "tunnel_logs.js.map": "/site/tunnel_logs-b7bf6ed736588476a12d.js.map",
   "images/clouds.jpg": "/site/images/clouds-810e0194dc7b412a91ade46f3ad018c5.jpg",
   "images/pattern3.png": "/site/images/pattern3-e722a58368e681d51903e9798721baea.png",
-  "tunnel_logs.css": "/site/tunnel_logs-6e1e095b950b65f59b47ad8e4c555abc.css",
-  "tunnel_logs.css.map": "/site/tunnel_logs-6e1e095b950b65f59b47ad8e4c555abc.css.map"
+  "tunnel_logs.css": "/site/tunnel_logs-d412a5cab325cbf532de3b6af4b247db.css",
+  "tunnel_logs.css.map": "/site/tunnel_logs-d412a5cab325cbf532de3b6af4b247db.css.map",
+  "tunnel_logs.js": "/site/tunnel_logs-2344e947c9d8822b3b3d.js",
+  "tunnel_logs.js.map": "/site/tunnel_logs-2344e947c9d8822b3b3d.js.map"
 }
