--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retunnel",
+  "name": "ate_eight",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-pro-regular": "^5.0.13",
