--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "eslint": "^5.11.1",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.0",
     "webpack-dev-server": "2.11.2"
   },
   "scripts": {}
