--- a/public/site/manifest.json
+++ b/public/site/manifest.json
@@ -1,8 +1,7 @@
 {
-  "images/clouds.jpg": "/site/images/clouds-810e0194dc7b412a91ade46f3ad018c5.jpg",
-  "images/pattern3.png": "/site/images/pattern3-e722a58368e681d51903e9798721baea.png",
-  "tunnel_logs.css": "/site/tunnel_logs-d412a5cab325cbf532de3b6af4b247db.css",
-  "tunnel_logs.css.map": "/site/tunnel_logs-d412a5cab325cbf532de3b6af4b247db.css.map",
-  "tunnel_logs.js": "/site/tunnel_logs-cff7b217d7c87234cce1.js",
-  "tunnel_logs.js.map": "/site/tunnel_logs-cff7b217d7c87234cce1.js.map"
+  "client.css": "/site/client-eaf245e404b5059740f5ff4eda2a76d8.css",
+  "client.css.map": "/site/client-eaf245e404b5059740f5ff4eda2a76d8.css.map",
+  "client.js": "/site/client-9cec40f43941d0551e6d.js",
+  "client.js.map": "/site/client-9cec40f43941d0551e6d.js.map",
+  "images/black-linen-2.png": "/site/images/black-linen-2-e325d6df15337bd368cebf67323ef1a4.png"
 }
