--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-merge": "^4.1.4"
   },
   "devDependencies": {
+    "change-case": "^3.0.2",
     "eslint": "^5.11.1",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
