basic game display

--- a/graphql.config.json
+++ b/graphql.config.json
@@ -15,7 +15,7 @@
 
   "endpoints" : [
     {
-      "name": "Default (http://localhost:3000/graphql)",
+      "name": "Ate 8 (http://localhost:3000/graphql)",
       "url": "http://localhost:3000/graphql",
       "options" : {
         "headers": {
@@ -24,5 +24,4 @@
       }
     }
   ]
-
 }
