--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "eslint-plugin-react": "^7.12.0",
     "webpack-dev-server": "2.11.2"
   },
-  "scripts": {}
+  "scripts": {
+    "clean": "rm -rf .cache public/site",
+    "build": "gatsby build",
+    "pretty": "prettier --write 'client/**/*.js'"
+  }
 }
