--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.2.6",
     "graphql": "^14.0.2",
     "inflection": "^1.12.0",
+    "postcss-comment-2": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.4.0",
     "prettier": "^1.15.3",
