--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@rails/webpacker": "3.5",
     "apollo-boost": "^0.1.22",
+    "atmosphere": "file:../../4winds/atmosphere/",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
+    "gatsby-starter-default": "file:../../4winds/atmosphere",
     "graphql": "^14.0.2",
     "inflection": "^1.12.0",
     "postcss-comment-2": "^1.0.1",
@@ -38,6 +40,7 @@
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.0",
+    "postcss": "^7.0.13",
     "webpack-dev-server": "2.11.2"
   },
   "scripts": {
