--- a/config/Gemfile
+++ b/config/Gemfile
@@ -19,7 +19,7 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+gem 'workflow-activerecord', '>= 4.1', '< 6.0'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
