--- a/config/Gemfile
+++ b/config/Gemfile
@@ -6,7 +6,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.5.1'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '~> 5.2.1'
+gem 'rails', '~> 6.0.0.beta1'
 # Use postgresql as the database for Active Record
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
@@ -48,7 +48,7 @@ gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
 
 # CPP Additions
 gem 'graphql'
-gem 'interactor-rails'
+gem 'interactor-rails', git: 'git@github.com:CPPWind/interactor-rails.git'
 gem 'pundit'
 gem 'rails_warden'
 gem 'surus'
