--- a/config/Gemfile
+++ b/config/Gemfile
@@ -19,7 +19,6 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-gem 'workflow-activerecord', '>= 4.1', '< 6.0'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
@@ -47,6 +46,8 @@ end
 gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
 
 # CPP Additions
+# gem 'workflow-activerecord', '>= 4.1', '< 6.0'
+gem 'aasm'
 gem 'graphql'
 gem 'interactor-rails', git: 'git@github.com:CPPWind/interactor-rails.git'
 gem 'pundit'
