--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,7 +69,7 @@
       2,
       "asc",
       {
-        "caseSensitive": true,
+        "caseSensitive": false,
         "natural": true
       }
     ],
