--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@rails/webpacker": "3.5",
     "apollo-boost": "^0.1.22",
-    "atmosphere": "file:../../4winds/atmosphere/",
+    "atmosphere": "file:../../4winds/atmosphere",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
     "gatsby-starter-default": "file:../../4winds/atmosphere",
