--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "postcss-preset-env": "^6.4.0",
     "prettier": "^1.15.3",
     "prop-types": "^15.6.2",
-    "react": "^16.6.2",
+    "react": "^16.8.2",
     "react-apollo": "^2.3.2",
+    "react-apollo-hooks": "^0.4.0",
     "react-burger-menu": "^2.5.4",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
