--- a/config/Gemfile
+++ b/config/Gemfile
@@ -83,3 +83,5 @@ group :development, :test do
 end
 
 gem "foreman", "~> 0.64.0", :group => :development
+
+gem "awesome_print", "~> 1.8", :group => :development
